--- a/lambda-deployer/package.json
+++ b/lambda-deployer/package.json
@@ -19,9 +19,11 @@
     "@types/multer": "^1.4.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "ignore-walk": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "winston": "^3.8.2"
   }
 }
