--- a/lambda-deployer-frontend/package.json
+++ b/lambda-deployer-frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.2.1",
     "http-proxy-middleware": "^2.0.6",
     "jszip": "^3.10.1",
+    "localforage": "^1.10.0",
     "nanoid": "^4.0.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
