--- a/lambda-deployer-frontend/package.json
+++ b/lambda-deployer-frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animejs": "^3.2.1",
     "axios": "^1.2.1",
     "http-proxy-middleware": "^2.0.6",
     "jszip": "^3.10.1",
