--- a/lambda-deployer/package.json
+++ b/lambda-deployer/package.json
@@ -22,6 +22,7 @@
     "form-data": "^4.0.0",
     "ignore-walk": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "memfs": "^3.4.13",
     "multer": "^1.4.5-lts.1",
     "openai": "^3.2.1",
     "winston": "^3.8.2"
