--- a/lambda-deployer-frontend/package.json
+++ b/lambda-deployer-frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.1",
     "axios": "^1.2.1",
+    "classnames": "^2.3.2",
     "http-proxy-middleware": "^2.0.6",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
@@ -26,6 +27,7 @@
     "react-scripts": "^5.0.1",
     "react-simple-code-editor": "^0.13.1",
     "react-tabs": "^6.0.0",
+    "react-textarea-autosize": "^8.4.0",
     "sass": "^1.56.2",
     "web-vitals": "^2.1.4"
   },
