--- a/lambda-deployer-frontend/package.json
+++ b/lambda-deployer-frontend/package.json
@@ -2,6 +2,9 @@
   "name": "yoga_frontend",
   "version": "0.1.0",
   "private": true,
+  "imports": {
+    "@backend/*.js": "/src/backend_logic/*.js"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
@@ -17,6 +20,7 @@
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "nanoid": "^4.0.1",
+    "openai": "^3.2.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -54,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv-webpack": "^8.0.1"
   }
 }
