--- a/lambda-deployer-frontend/package.json
+++ b/lambda-deployer-frontend/package.json
@@ -38,6 +38,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "deploy:dev": "gh-pages -d build --remote personal",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
