resolved logo issue

--- a/lambda-deployer-frontend/package.json
+++ b/lambda-deployer-frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://lambdaease.com/chatgpt-functions-deployer",
   "name": "lambdaease",
   "version": "0.1.0",
   "private": true,
