--- a/lambda-deployer-frontend/package.json
+++ b/lambda-deployer-frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.3",
@@ -20,6 +21,7 @@
     "http-proxy-middleware": "^2.0.6",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
+    "moment": "^2.29.4",
     "nanoid": "^4.0.1",
     "openai": "^3.2.1",
     "prismjs": "^1.29.0",
