--- a/lambda-deployer-frontend/package.json
+++ b/lambda-deployer-frontend/package.json
@@ -6,11 +6,16 @@
   "imports": {
     "@backend/*.js": "/src/backend_logic/*.js"
   },
+	"author": "Durgesh Maurya <durgeshmaurya07@gmail.com>",
+	"contributors": [
+		"Durgesh Maurya <durgeshmaurya07@gmail.com> (https://metacall.io/)"
+	],
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@metacall/protocol": "^0.1.24",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
