--- a/lambda-deployer-frontend/package.json
+++ b/lambda-deployer-frontend/package.json
@@ -24,10 +24,12 @@
     "axios": "^1.2.1",
     "classnames": "^2.3.2",
     "http-proxy-middleware": "^2.0.6",
+    "install": "^0.13.0",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "moment": "^2.29.4",
     "nanoid": "^4.0.1",
+    "npm": "^9.7.2",
     "openai": "^3.2.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
@@ -41,6 +43,7 @@
     "react-tabs": "^6.0.0",
     "react-textarea-autosize": "^8.4.0",
     "sass": "^1.56.2",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
