--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "dotenv-webpack": "^8.0.1",
     "tailwindcss": "^3.3.2"
   }
