--- a/.gitignore
+++ b/.gitignore
@@ -37,11 +37,12 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
+build/
+dist/
 
 # Dependency directories
 node_modules/
 jspm_packages/
-build/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
