Revert "removed gh-pages cleaning before deploy"
This reverts commit 9b6da1fbf1f397f3ccb96ad56dcb9bccde6ea461.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,3 +28,4 @@ jobs:
                 with:
                     branch: gh-pages
                     folder: build
+                    clean: true
