--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gpt.dashboard.metacall.io",
+  "homepage": "https://metacall.github.io/gpt-deploy/",
   "name": "metacall-gpt-deploy",
   "version": "0.1.0",
   "author": "Durgesh Maurya <durgeshmaurya07@gmail.com>",
