--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
