--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,6 +4,8 @@ on:
     push:
         branches:
             - master
+        tags:
+            - 'v*.*.*'
 
 jobs:
     deploy:
@@ -25,7 +27,8 @@ jobs:
             
             -   name: Deploy
                 uses: JamesIves/github-pages-deploy-action@4.1.1
+                if: startsWith(github.ref, 'refs/tags/')
                 with:
-                    branch: gh-pages
+                    branch: master
                     folder: build
                     clean: true
