--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,9 +1,12 @@
-name: Deploy to github pages
+name: CI
 
 on:
+    pull_request:
     push:
         branches:
             - master
+        tags:
+            - 'v*.*.*'
 
 jobs:
     deploy:
@@ -25,6 +28,7 @@ jobs:
             
             -   name: Deploy
                 uses: JamesIves/github-pages-deploy-action@4.1.1
+                if: startsWith(github.ref, 'refs/tags/')
                 with:
                     branch: gh-pages
                     folder: build
